[Qt][Mac] Fix the build after r124873 https://bugs.webkit.org/show_bug.cgi?id=102475

Patch by Peter Gal <galpeter@inf.u-szeged.hu> on 2012-11-16
Reviewed by Noam Rosenthal.

Change the CoordinatedImageBackingID typedef from uintptr_t to uint64_t.

* Shared/WebLayerTreeInfo.h:
* UIProcess/CoordinatedGraphics/LayerTreeCoordinatorProxy.messages.in:

Canonical link: https://commits.webkit.org/120638@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134946 268f45cc-cd09-0410-ab3c-d52691b4dbfc